--- a/AdventOfCodeInHaskell.cabal
+++ b/AdventOfCodeInHaskell.cabal
@@ -61,16 +61,19 @@ executable AdventOfCodeInHaskell
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    other-modules: AoCTypes,
+      Parser,
+      Dispatch,
+      Year2015.Day1
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.18.3.0
+    build-depends:    base ^>=4.18.3.0, containers
 
     -- Directories containing source files.
-    hs-source-dirs:   app
+    hs-source-dirs:   app, src, solutions
 
     -- Base language which the package is written in.
     default-language: Haskell2010
