--- a/AdventOfCodeInHaskell.cabal
+++ b/AdventOfCodeInHaskell.cabal
@@ -61,9 +61,9 @@ executable AdventOfCodeInHaskell
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules: AoCTypes,
+    other-modules: AoCFramework.AoCTypes,
       Parser,
-      Dispatch,
+      AoCFramework.Dispatch,
       Year2015.Day1
 
     -- LANGUAGE extensions used by modules in this package.
