--- a/AdventOfCodeInHaskell.cabal
+++ b/AdventOfCodeInHaskell.cabal
@@ -64,6 +64,7 @@ executable AdventOfCodeInHaskell
     other-modules: AoCFramework.AoCTypes,
       Parser,
       AoCFramework.Dispatch,
+      Benchmark,
       Year2015.Day1,
       Year2015.Day2
 
@@ -71,7 +72,7 @@ executable AdventOfCodeInHaskell
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.18.3.0, containers
+    build-depends:    base ^>=4.18.3.0, containers, deepseq, time
 
     -- Directories containing source files.
     hs-source-dirs:   app, src, solutions
