--- a/AdventOfCodeInHaskell.cabal
+++ b/AdventOfCodeInHaskell.cabal
@@ -77,5 +77,7 @@ executable AdventOfCodeInHaskell
     -- Directories containing source files.
     hs-source-dirs:   app, src, solutions
 
+    ghc-options: -O2 -Wall -threaded -rtsopts
+
     -- Base language which the package is written in.
     default-language: Haskell2010
