--- a/AdventOfCodeInHaskell.cabal
+++ b/AdventOfCodeInHaskell.cabal
@@ -66,7 +66,8 @@ executable AdventOfCodeInHaskell
       AoCFramework.Dispatch,
       Benchmark,
       Year2015.Day1,
-      Year2015.Day2
+      Year2015.Day2,
+      Year2015.Day3
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
