--- a/AdventOfCodeInHaskell.cabal
+++ b/AdventOfCodeInHaskell.cabal
@@ -68,13 +68,19 @@ executable AdventOfCodeInHaskell
       Year2015.Day1,
       Year2015.Day2,
       Year2015.Day3,
+      Year2015.Day4,
       Year2025.Day1
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.18.3.0, containers, deepseq, time
+    build-depends:
+      base ^>=4.18.3.0,
+      containers,
+      deepseq,
+      time,
+      MissingH
 
     -- Directories containing source files.
     hs-source-dirs:   app, src, solutions
