--- a/AdventOfCodeInHaskell.cabal
+++ b/AdventOfCodeInHaskell.cabal
@@ -69,6 +69,7 @@ executable AdventOfCodeInHaskell
       Year2015.Day2,
       Year2015.Day3,
       Year2015.Day4,
+      Year2015.Day5,
       Year2025.Day1
 
     -- LANGUAGE extensions used by modules in this package.
