--- a/AdventOfCodeInHaskell.cabal
+++ b/AdventOfCodeInHaskell.cabal
@@ -67,12 +67,14 @@ executable AdventOfCodeInHaskell
       Benchmark,
       Linear.V2,
       Strict.List,
+      Types.IntegerTypes,
       Year2015.Day1,
       Year2015.Day2,
       Year2015.Day3,
       Year2015.Day4,
       Year2015.Day5,
       Year2015.Day6,
+      Year2015.Day7,
       Year2025.Day1
 
     -- LANGUAGE extensions used by modules in this package.
@@ -85,7 +87,10 @@ executable AdventOfCodeInHaskell
       deepseq,
       time,
       MissingH,
-      array
+      array,
+      unordered-containers,
+      mtl
+
 
     -- Directories containing source files.
     hs-source-dirs:   app, src, solutions
