Day 7 did not manage anything about it not being sequences but dependency based, there goes my solution, will implement a dependency solved version soon

--- a/AdventOfCodeInHaskell.cabal
+++ b/AdventOfCodeInHaskell.cabal
@@ -67,6 +67,7 @@ executable AdventOfCodeInHaskell
       Benchmark,
       Linear.V2,
       Strict.List,
+      Types.IntegerTypes,
       Year2015.Day1,
       Year2015.Day2,
       Year2015.Day3,
