Made the Parser generic over the input, it is here and there still a bit iffy especially with the erros but it seems to work

--- a/AdventOfCodeInHaskell.cabal
+++ b/AdventOfCodeInHaskell.cabal
@@ -90,7 +90,8 @@ executable AdventOfCodeInHaskell
       array,
       unordered-containers,
       mtl,
-      hashable
+      hashable,
+      bytestring
 
 
     -- Directories containing source files.
